inicio de pw mobile

--- a/www/index.html
+++ b/www/index.html
@@ -10,14 +10,61 @@
   
 
   <link rel="stylesheet" href="components/loader.css">
-  <script src="lib/css/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="lib/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
 
   <script>
+
   
   </script>
 </head>
 <body>
-  This is a template for Onsen UI app.
+  <div class="container">
+    <div class="row">
+        <div class="col-sm"> 
+          <h1>Calculos<h1>
+
+        </div>
+    </div>
+  
+    <div class="row">
+      <div class="col-sm"> 
+        <div class="form-group"> 
+          <label for="">Valor 1</label>
+          <input type="number" class="form-control">
+
+        </div>  
+      </div>
+    </div>
+
+     <div class="row">
+        <div class="col-sm"> 
+          <div class="form-group"> 
+            <label for="">Valor 2</label>
+            <input type="number" class="form-control">
+          
+          </div>  
+       </div>
+    </div>
+
+      <div class="row">
+        <div class="col-sm"> 
+          <div class="form-group"> 
+            <button class="btn btn-primary btn-block"> Somar </button>
+          </div>  
+       </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm"> 
+        <div class="form-group"> 
+            <label for="">Resultado</label>
+            <input type="number" class="form-control" readonly>
+        </div>  
+      </div>
+    </div>
+
+</div>
+
 </body>
 </html>
